--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>deck.gl Example</title>
+    <title>AVIS for GLADIATOR</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://unpkg.com/maplibre-gl@3.6.0/dist/maplibre-gl.css"
